overflow issue fixed

--- a/style.css
+++ b/style.css
@@ -4,21 +4,21 @@ body {
   box-sizing: border-box;
 }
 .container {
-  width: 22vw;
-  height: 84vh;
+  width: 21.5rem;
+  height: 40rem;
   background: rgb(43, 48, 58);
-  margin: 1.5rem auto auto auto;
+  margin: 1rem auto auto auto;
   border-radius: 1.5rem;
   box-shadow: 0px 0px 10px black;
 }
 
-/* mic section  */
+/*mic section  */
 
 .mic-icon {
   padding: 1.4rem 0rem 0rem 1.4rem;
 }
 .icon {
-  width: 2.5rem;
+  width: 2.3rem;
   cursor: pointer;
 }
 .icon:hover {
@@ -31,7 +31,7 @@ body {
 /* display section */
 
 .display {
-  height: 24.6%;
+  height: 26%;
   width: 99.9%;
   text-align: right;
   font-size: 2rem;
